# new_cv

./: pyproject.toml  zensical.toml
.github/workflows/: docs.yml
docs/: HY.md  KAMK.md  index.md  photography.md  portfolio.md  projects.md
site/: 404.html  index.html  search.json  sitemap.xml
site/HY/: index.html
site/KAMK/: index.html
site/photography/: index.html
site/portfolio/: index.html
site/projects/: index.html
